Fix heading padding on mobile

--- a/src/themes/somrat/assets/css/custom.css
+++ b/src/themes/somrat/assets/css/custom.css
@@ -78,3 +78,7 @@
 .submit {
     width: 200px !important;
 }
+
+h1 {
+    margin-top: 1rem;
+}
